[package]
name = "freqle"
author = "Jonas Carpay"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.12", features = ["cargo", "derive"] }
ordered-float = "4.2.0"
serde = { version = "1.0.195", features = ["derive", "serde_derive"] }

[profile.release]
lto = true
strip = true
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
