[package]
name = "freqle"
authors = ["Jonas Carpay"]
version = "0.1.0"
edition = "2021"
description = "Extremely simple CLI tool for maintaining a frecency history"
license = "MIT"
repository = "https://github.com/jonascarpay/freqle"
homepage = "https://github.com/jonascarpay/freqle"
readme = "README.md"
keywords = ["frecency", "cli", "history", "dmenu", "fzf"]
categories = ["command-line-utilities"]

[dependencies]
bincode = "1.3.3"
clap = { version = "4.4.12", features = ["cargo", "derive"] }
serde = { version = "1.0.195", features = ["derive", "serde_derive"] }

[profile.release]
lto = true
strip = true
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
